2001-02-28  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>

	Fix bug 6368 - Multibyte font handling.
	
	* librsvg/rsvg-ft.c: (rsvg_ft_get_glyph),
	(rsvg_ft_measure_or_render_string):
	Tell freetype to never load bitmaps when loading glyphs.  We only
	use the outlines of scalable fonts.  This means our code will work
	even for glyphs that have embedded bitmaps.

	Add support for multi byte characters.  We do this by allocate a
	wide character array and converting the source string to wide
	chars.  If no wide characters are found in the source string, then
	we fill in the wide char array with the regular single byte chars.

	This changes are based on a patch contributed by Yukihiro Nakai
	<nakai@gnome.gr.jp> - thanks much.


	Unrelated change.
	
	* libnautilus-extensions/nautilus-labeled-image.c:
	(nautilus_labeled_image_initialize):
	Remove a extraneous '+' that sneaked in here.

2001-03-01  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added Makefile generation for the below.
	* help/nautilus-quick-reference/Makefile.am: Added no subdir
	* help/nautilus-quick-reference/no/*: Added Norwegian translation.
	
2001-02-28  Darin Adler  <darin@eazel.com>

	* check-strings.pl: Fixed error in script that John noticed
	when he tried it. The regular expression for matching
	function names was matching way too many.

2001-02-28  Darin Adler  <darin@eazel.com>

	* check-strings-functions:
	* check-strings.pl: Tweaks to just-checked-in stuff.

	* src/nautilus-first-time-druid.c: Fix build by
	getting rid of incorrect use of stringize macro.

2001-02-28  John Harper  <jsh@eazel.com>

	reviewed by: Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 6988 (Nautilus consumes CPU for 5 mins on startup) by
	reverting my fix to bug 6820 (directory sort order is different
	in tree view):

	* components/tree/nautilus-tree-view.c
	(nautilus_tree_view_initialize): commented out the call to
	gtk_clist_set_compare_func - revert to using the default clist