@@ -1,3 +1,12 @@
+2001-02-28  Mike Fleming  <mfleming@eazel.com>
+
+	reviewed by: Darin Adler <darin@eazel.com>
+
+	Bug 7157: Reloads can cause crash; reloads to redirected URI's can
+	cause error dialog to appear
+	
+	* src/nautilus-window-manage-views.c: (nautilus_window_reload):
+
 2001-02-28  Ramiro Estrugo  <ramiro@eazel.com>
 
 	reviewed by: Darin Adler  <darin@eazel.com>
